# Nyxara

./: CMakeLists.txt  Doxyfile  README.md  vcpkg.json
Engine/: Nyxara.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/Logging/: CMakeLists.txt  CallDepthManager.h  Categories.h  Category.h  FunctionTracer.h  Logger.h  Macros.h  Verbosity.h
Engine/Core/Logging/Private/: Category.cpp  Logger.cpp
apps/: CMakeLists.txt  nyxara.cpp
cmake/: bootstrap-vcpkg.cmake
core/: CMakeLists.txt
core/logging/: CMakeLists.txt
core/logging/include/nyxara/logging/: call_depth.h  categories.h  category.h  function_tracer.h  logger.h  macros.h  verbosity.h
core/logging/src/logging/: category.cpp  logger.cpp
core/math/: CMakeLists.txt
core/math/include/nyxara/math/: math.h  transform.h  types.h  utils.h  vec1.h  vec2.h  vec3.h  vec4.h  vector_opts.h
docs/: CMakeLists.txt  Doxyfile.in  annotated.html  annotated_dup.js  call__depth__manager_8h.html  call__depth__manager_8h.js  call__depth__manager_8h_source.html  categories_8h.html  categories_8h.js  categories_8h_source.html  category_8cpp.html  category_8h.html  category_8h.js  category_8h_source.html  class_nyxara_1_1_logging_1_1_call_depth_manager-members.html  class_nyxara_1_1_logging_1_1_call_depth_manager.html  class_nyxara_1_1_logging_1_1_call_depth_manager.js  class_nyxara_1_1_logging_1_1_category-members.html  class_nyxara_1_1_logging_1_1_category.html  class_nyxara_1_1_logging_1_1_function_tracer-members.html  class_nyxara_1_1_logging_1_1_function_tracer.html  class_nyxara_1_1_logging_1_1_improved_logger-members.html  class_nyxara_1_1_logging_1_1_improved_logger.html  class_nyxara_1_1_logging_1_1_improved_logger.js  class_nyxara_1_1_logging_1_1_log_entry-members.html  class_nyxara_1_1_logging_1_1_log_entry.html  class_nyxara_1_1_logging_1_1_log_entry.js  class_nyxara_1_1_logging_1_1_log_entry_builder-members.html  class_nyxara_1_1_logging_1_1_log_entry_builder.html  class_nyxara_1_1_logging_1_1_log_entry_builder.js  class_nyxara_1_1_logging_1_1_logger-members.html  class_nyxara_1_1_logging_1_1_logger.html  class_nyxara_1_1_logging_1_1_logger.js  class_nyxara_1_1_logging_1_1_logger_impl-members.html  class_nyxara_1_1_logging_1_1_logger_impl.html  class_nyxara_1_1_logging_1_1_logger_impl.js  class_nyxara_1_1_platform_1_1_window-members.html  class_nyxara_1_1_platform_1_1_window.html  classes.html  classnyxara_1_1logging_1_1_call_depth_manager-members.html  (+134 more)
docs/doxygen/: namespaces.dox
docs/html/: annotated.html  annotated_dup.js  categories_8h.html  categories_8h.js  categories_8h_source.html  category_8h_source.html  class_nyxara_1_1_logging_1_1_call_depth_manager.html  class_nyxara_1_1_logging_1_1_category-members.html  class_nyxara_1_1_logging_1_1_category.html  class_nyxara_1_1_logging_1_1_category.js  class_nyxara_1_1_logging_1_1_function_tracer.html  class_nyxara_1_1_logging_1_1_function_tracer.js  class_nyxara_1_1_logging_1_1_logger.html  dir_7c9203644cdac6359701f8b8385f9f0c.html  dir_895c4acd95c2a2000274f1653976176a.js  dir_996f45160da62e1a3d7f6046fad68f51.html  dir_996f45160da62e1a3d7f6046fad68f51.js  dir_a0e47c104ecd6c0b6dccb5f33d071508.html  dir_d3af05e77efa57ecc9cc187fba130185.html  dir_d3af05e77efa57ecc9cc187fba130185.js  dir_da7058294a9b0a9bf33c52277e50e4b7.html  dir_da7058294a9b0a9bf33c52277e50e4b7.js  doxygen_crawl.html  files.html  function__tracer_8h_source.html  functions.html  globals_func.html  group___logging_macros.js  logger_8h_source.html  macros_8h_source.html  navtreeindex0.js  topics.html  verbosity_8h_source.html
docs/html/search/: all_2.js  all_3.js  all_6.js  all_a.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  groups_0.js  searchdata.js
docs/latex/: annotated.tex  call__depth__manager_8h_source.tex  categories_8h.tex  categories_8h_source.tex  category_8h_source.tex  class_nyxara_1_1_logging_1_1_call_depth_manager.tex  class_nyxara_1_1_logging_1_1_category.tex  class_nyxara_1_1_logging_1_1_function_tracer.tex  class_nyxara_1_1_logging_1_1_logger.tex  class_nyxara_1_1_logging_1_1_logger_impl.tex  files.tex  function__tracer_8h_source.tex  group___logging_macros.tex  logger_8h_source.tex  macros_8h_source.tex  refman.tex  topics.tex  verbosity_8h_source.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_0.js  files_1.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  (+22 more)
engine/: CMakeLists.txt  Nyxara.cpp
engine/core/: CMakeLists.txt
engine/core/logging/: CMakeLists.txt
engine/core/logging/include/nyxara/core/logging/: call_depth_manager.h  categories.h  category.h  function_tracer.h  logger.h  macros.h  verbosity.h
engine/core/logging/src/: category.cpp  logger.cpp
engine/core/math/: CMakeLists.txt
include/nyxara/: nyxara.h
include/nyxara/core/logging/: call_depth_manager.h  categories.h  category.h  function_tracer.h  logger.h  macros.h  verbosity.h
include/nyxara/platform/: window.h
src/: Nyxara.cpp
src/engine/: logger.cpp  logger.h
src/nyxara/core/logging/: CMakeLists.txt  categories.cpp  category.cpp  logger.cpp
src/nyxara/platform/: CMakeLists.txt  glfw_window.cpp  window.cpp  window_impl.h
src/nyxara/renderer/vulkan/: CMakeLists.txt
